# aicodeprep-gui

./: .aicodeprep-flow.json  .aicodeprep-gui  .clinerules  .gitignore  03082026-output-1.txt  03082026-output-2.txt  03082026-output-3.txt  032226-output-4.txt  032426-output-4.txt  032526-output-4.txt  032726-output-4.txt  032826-output-4.txt  AGENTS.md  AGENTS_intl.md  AUTH_SOLUTIONS_ANALYSIS.md  BESTOFN_COMPLETE_SOLUTION.md  BESTOFN_DOCUMENTATION_INDEX.md  BESTOFN_DYNAMIC_SLOTS_FEATURE.md  BESTOFN_DYNAMIC_SLOTS_SUMMARY.md  BESTOFN_QUICK_REFERENCE.md  BESTOFN_VISUAL_GUIDE.md  CHANGELOG.md  CLAUDE.md  DOCS_DEPLOYMENT.md  FLOW_ADD_NODE_BUTTON_2025-10-13.md  FLOW_API_KEY_MANAGER_UPDATE.md  FLOW_BUG_FIXES_OCT_6.md  FLOW_CONFIGURED_TEMPLATE_FIX_2025-10-14.md  FLOW_DEFAULT_ENHANCEMENT_2025-10-14.md  FLOW_EXECUTION_RESULTS.md  FLOW_FIXES_2025-10-06.md  FLOW_FIXES_2025-10-13.md  FLOW_HELP_AND_CONFIGURED_TEMPLATE.md  FLOW_IMPLEMENTATION_SPECS.md  FLOW_IMPROVEMENTS_2025-01-27.md  FLOW_IMPROVEMENTS_2025-10-15.md  FLOW_IMPROVEMENTS_PLAN.md  FLOW_JSON_IMPORT_FIX.md  FLOW_LLM_ENHANCEMENTS.md  FLOW_MODEL_NAMING_GUIDE.md  (+96 more)
.apm/: Implementation_Plan.md  metadata.json
.github/: FUNDING.yml
aicodeprep-flow/: README.md  TODO.md  mcp_config.json  pyproject.toml
aicodeprep-flow/src/aicodeprep_flow/: apptheme.py  main.py  main_window.py
aicodeprep-flow/src/aicodeprep_flow/data/: flow.json
aicodeprep-flow/src/aicodeprep_flow/flow/: api_key_dialog.py  flow_dock.py
aicodeprep-flow/src/aicodeprep_flow/flow/nodes/: aggregate_nodes.py  llm_nodes.py
aicodeprep-flow/src/aicodeprep_flow/mcp/: server.py
aicodeprep_gui/: __init__.py  apptheme.py  config.py  file_processor.py  main.py  rust_backend.py  smart_logic.py  user_settings.py
docs/: core-workflow.md  faq.md  index.md  install-and-launch.md  performance.md  pro-features.md  prompt-strategy.md  right-click-integration.md  what-it-does.md  why-not-just-agents.md
docs-stuff/: podman-mkdocs-material.md  podman-mkdocs.ps1
old_random_scripts/: pyside6_qt_docs.md
parallel-MCP/: .aicodeprep-gui  ai_models.txt  mcp_docs.md  old-instructions.txt  testprompt-response.md  testprompt.txt
parallel-MCP/parallel-llm-mcp/: .aicodeprep-gui  LICENSE  MONITORING_SUMMARY_10_12_2025.md  mcp_config.json  pyproject.toml  test_llm_1.txt  test_llm_2.txt  test_llm_3.txt  test_llm_4.txt  test_llm_5.txt  test_server.py  watch_progress.ps1  watch_progress_color.ps1
parallel-MCP/parallel-llm-mcp/src/parallel_llm_mcp/: __init__.py  __main__.py  client.py  parallel.py  server.py
parallel-MCP/parallel-llm-mcp/tests/: test_parallel.py  test_server.py
plans/: ads.md  ai-assist-plan.md  ai-chat-docked.md
pyside6_docs/: gfonts.md  (+7 more)
(+148 files in other folders)
